--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
+    "@nuxtjs/dayjs": "^1.4.0",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
